# agriculture-monitoring-demo

./: CMakeLists.txt  README.md
components/ esp32/mcp23017/: Adafruit_MCP23017.cpp  Adafruit_MCP23017.h
components/osal/: CMakeLists.txt
components/osal/freertos/: osal_freertos.c
components/osal/include/: osal.h
components/osal/posix/: osal_posix.c
docs/: build.md  code-quality.md
scripts/: check_complexity.sh
src/ActivityLed/: ActivityLed.cpp
src/ConnectivityLed/: ConnectivityLed.cpp
src/LedController/: LedController.cpp
src/StatusLed/: CMakeLists.txt  StatusLed.cpp
src/app/: AgricultureMonitoring.cpp  CMakeLists.txt
src/hal/: HAL_GPIO.hpp
src/include/: ActivityLed.hpp  AgricultureMonitoring.hpp  BaseLed.hpp  ConnectivityLed.hpp  ILedHardware.hpp  Led.hpp  LedController.hpp  StatusLed.hpp
targets/esp32-s3/: CMakeLists.txt
targets/esp32-s3/main/: CMakeLists.txt  app_main.cpp
targets/host/: CMakeLists.txt
targets/host/hal_impl/: LedGpio.cpp  LedGpio.hpp
targets/host/main/: SimulatorMain.cpp
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/googletest/include/gmock/: gmock-actions.h  gmock-matchers.h
tests/googletest/test_src/: gtest.cc
tests/integration/: CMakeLists.txt
tests/integration/LedController/: CMakeLists.txt  mock_ILedHardware.hpp  test_LedController.cpp
tests/unit/: CMakeLists.txt
tests/unit/StatusLed/: CMakeLists.txt  mock_HAL_GPIO.hpp  test_StatusLed.cpp
